# SKSG_TChinese

./: .gitignore  GEMINI.md  README.md  REFACTOR_SUMMARY.md  pyproject.toml  run_new.py
.github/workflows/: Bulid.yml
src/: __init__.py  config.py  main.py  platform_detector.py  utils.py
src/backup/: __init__.py  backup_manager.py
src/ui/: menu.py
src/unity/: __init__.py  asset_processor.py  bundle_handler.py
tests/: __init__.py  test_backup.py  test_integration.py  test_platform.py  test_run_new.py  test_unity_processing.py  test_utils.py
